<resources>
    <string name="app_name">Hurricane</string>


        <string name="btn_iniciarPantalla">Iniciar Sesion</string>
        <string name="btn_registrarPantalla">Registrarse</string>

        <string name="btn_iniciarSesion">Iniciar Sesion</string>
        <string name="btn_chat">Mensajes</string>
        <string name="btn_registrarseSesion">Registrarse</string>
        <string name="btn_cerrarSesion">Cerrar Sesion </string>

        <string name="btn_cambiarfoto">Actualizar foto de perfil</string>


        <string name="usuario">Usuario</string>
        <string name="correo">Correo</string>

        <string name="contraseña">Contraseña</string>
        <string name="rcontraseña">Repite contraseña</string>

        <string name="nombre">Nombre</string>
        <string name="apellido">Apellido</string>
        <string name="bio">Bio</string>


        <string name="cambio">Cambia de idioma </string>

        <string name="comentario">El lenguaje ha sido cambiado con exito</string>
        <string name="titulo">Bienvenido!</string>
        <string name="admin">Admin</string>

        <string name="escriba_mensaje">Escribe un mensaje</string>
        <string name="enviar">Enviar</string>
        <!-- TODO: Remove or change this placeholder text -->
        <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>