<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrarseActivity"
    android:background="@color/moradito">

    <LinearLayout
        android:layout_width="363dp"
        android:layout_height="629dp"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="61dp"
         >

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@mipmap/iconom"
            />
        <EditText
            android:id="@+id/usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/usuario"
            android:inputType="textPersonName"
            android:textStyle=""
            />
        <EditText
            android:id="@+id/nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nombre"
            android:inputType="textPersonName" />
        <EditText
            android:id="@+id/apellido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/apellido"
            android:inputType="textPersonName" />
        <EditText
            android:id="@+id/bio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/bio"
            android:inputType="textPersonName" />
        <EditText
            android:id="@+id/correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/correo"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/contrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/contraseña"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/contrasenaConfirmacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/rcontraseña"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/iniciarSesionBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="registrarUsuario"
            android:text="@string/btn_registrarseSesion"
            android:textColor="@color/moradito"
            android:backgroundTint="@color/white"
            android:drawableRight="@drawable/baseline_app_registration_24"
            />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>