<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/moradito"


    >

    <LinearLayout
        android:layout_width="351dp"
        android:layout_height="670dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="30dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/morado"

            />

        <EditText
            android:id="@+id/correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/correo"
            android:inputType="textPersonName"

            />

        <EditText
            android:id="@+id/contrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/contraseña"
            android:inputType="textPassword"
 />

        <Button
            android:id="@+id/iniciarSesionBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="iniciarSesion"
            android:text="@string/btn_iniciarSesion"
            android:textColor="@color/moradito"
            android:backgroundTint="@color/white"
            android:drawableRight="@drawable/baseline_login_24"



            />

        <Button
            android:id="@+id/button"
            android:layout_width="217dp"
            android:layout_height="36dp"
            android:onClick="irRegistrarse"
            android:text="@string/btn_registrarseSesion"
            android:textColor="@color/moradito"
            android:backgroundTint="@color/white"
            android:drawableRight="@drawable/baseline_app_registration_24"



            />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginBottom="50dp"
            android:spinnerMode="dialog"
            android:textColor="@color/black"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>